--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           border-radius: 12px;
           font-size: 1.25rem;
           color: white;
-          background-image: url('/test-btn.svg');
+          background-image: url('test-btn.svg');
             background-repeat: no-repeat;
             background-position: 100% 100%;
           will-change: transform;
