--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           width: 100%;
           height: 100%;
           border-radius: 12px;
-          background: hsl(0deg 0% 0% / 0.25);
+          background: #6A2F18;
           will-change: transform;
           transform: translateY(2px);
           transition:
