--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
           width: 100%;
           height: 96%;
           border-radius: 12px;
-          background: linear-gradient(
-            to left,
-            hsl(340deg 100% 16%) 0%,
-            hsl(340deg 100% 32%) 8%,
-            hsl(340deg 100% 32%) 92%,
-            hsl(340deg 100% 16%) 100%
+          background:  #6A2F18;
           );
         }
         .front {
